--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
   "private": true,
   "scripts": {
-    "dev": "npm run development",
-    "development": "mix",
-    "watch": "mix watch",
-    "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot",
-    "prod": "npm run production",
-    "production": "mix --production"
+    "dev": "vite",
+    "build": "vite build"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "laravel-vite-plugin": "^0.5.2",
+    "vite": "^3.0.4",
     "axios": "^0.27",
     "eslint": "^8.10.0",
     "eslint-plugin-vue": "^8.5.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "laravel-mix": "^6.0.43",
-    "laravel-mix-eslint": "^0.2.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.13",
     "resolve-url-loader": "^5.0.0",
@@ -27,7 +22,8 @@
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "vue-loader": "^17.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vue-tsc": "^0.39.3"
   },
   "dependencies": {
     "bootstrap": "^5.2.0-beta1",
