--- a/composer.json
+++ b/composer.json
@@ -7,22 +7,22 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.0.2",
-    "guzzlehttp/guzzle": "^7.2",
-    "laravel/framework": "^9.11",
-    "laravel/sanctum": "^2.14.1",
-    "laravel/tinker": "^2.7"
+    "php": "^8.1",
+    "guzzlehttp/guzzle": "^7.5",
+    "laravel/framework": "^v10.1",
+    "laravel/sanctum": "^v3.2",
+    "laravel/tinker": "^2.8"
   },
   "require-dev": {
-    "barryvdh/laravel-debugbar": "^3.6",
+    "barryvdh/laravel-debugbar": "^3.7",
     "fakerphp/faker": "^1.9.1",
-    "laravel/sail": "^1.0.1",
+    "laravel/pint": "^1.0",
     "mockery/mockery": "^1.4.4",
     "nunomaduro/collision": "^6.1",
     "phpunit/phpunit": "^9.5.10",
-    "slevomat/coding-standard": "^7.1",
-    "spatie/laravel-ignition": "^1.0",
-    "squizlabs/php_codesniffer": "^3.6.2"
+    "slevomat/coding-standard": "^7.2",
+    "spatie/laravel-ignition": "^2.0",
+    "squizlabs/php_codesniffer": "^3.7"
   },
   "autoload": {
     "psr-4": {
@@ -65,8 +65,13 @@
   "config": {
     "optimize-autoloader": true,
     "preferred-install": "dist",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "pestphp/pest-plugin": true,
+      "php-http/discovery": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true
 }
