--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,72 @@
-version: '3.8'
 services:
-  webserver:
-    build: docker/general
-    container_name: ubuntu.${APP_NAMESPACE}
+  nginx:
+    build: .docker/nginx
     depends_on:
-      - mariadb
+      - php-fpm
     volumes:
-      - .:/var/www/html
+      - .:/app
+      - ./.docker/nginx/vhost:/etc/nginx/conf.d
     ports:
-      - '${NGINX_HTTP_PORT:-8000}:80'
-      - '${NGINX_HTTP_PORT:-8001}:443'
+      - '${NGINX_HTTP_PORT:-}:80'
+      - '${NGINX_HTTPS_PORT:-}:443'
     networks:
       - web
       - default
     labels:
       - traefik.enable=true
-      - traefik.http.routers.web-http.rule=Host(`${APP_HOST}`)
-      - traefik.http.routers.web-https.rule=Host(`${APP_HOST}`)
-      - traefik.http.routers.web-https.tls=true
+      - traefik.http.routers.web-http-${COMPOSE_PROJECT_NAME}.rule=Host(`${APP_HOST:-test-app.loc}`)
+      - traefik.http.routers.web-https-${COMPOSE_PROJECT_NAME}.rule=Host(`${APP_HOST:-test-app.loc}`)
+      - traefik.http.routers.web-https-${COMPOSE_PROJECT_NAME}.tls=true
+  php-fpm:
+    build: .docker/php-fpm
+    depends_on:
+      - mariadb
+      - redis
+    environment:
+      - CURRENT_UID=${CURRENT_UID:-1000}
+      - CURRENT_GID=${CURRENT_GID:-1000}
+    volumes:
+      - .:/app
+      - ./.docker/php-fpm/php.ini:/usr/local/etc/php/php.ini
+    labels:
+      traefik.enable: "false"
+      ofelia.enabled: "true"
+      ofelia.job-exec.php-cli.schedule: "@every 1m"
+      ofelia.job-exec.php-cli.user: www-data
+      ofelia.job-exec.php-cli.command: "php /app/artisan schedule:run"
   mariadb:
-    image: 'mariadb:10'
-    container_name: mariadb.${APP_NAMESPACE}
+    image: 'mariadb:11'
     ports:
       - '${FORWARD_DB_PORT:-}:3306'
     environment:
-      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD:-laravel}'
+      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD:-rootpassword}'
       MYSQL_ROOT_HOST: "%"
-      MYSQL_DATABASE: '${DB_DATABASE:-laravel}'
-      MYSQL_USER: '${DB_USERNAME:-laravel}'
-      MYSQL_PASSWORD: '${DB_PASSWORD:-secret}'
+      MYSQL_DATABASE: '${DB_DATABASE:-dbname}'
+      MYSQL_USER: '${DB_USERNAME:-dbuser}'
+      MYSQL_PASSWORD: '${DB_PASSWORD:-password}'
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
     volumes:
-      - './docker/mariadb/data:/var/lib/mysql'
+      - './.docker/mariadb/data:/var/lib/mysql'
     networks:
       - web
       - default
     labels:
       - traefik.enable=false
   redis:
-    image: redis
-    container_name: redis.${APP_NAMESPACE}
+    build: .docker/redis
     volumes:
-      - ./docker/redis/data:/data
+      - ./.docker/redis/data:/data
     ports:
-      - '${REDIS_PORT:-6379}:${REDIS_PORT:-6379}'
-    networks:
-      - default
+      - '${REDIS_PORT:-}:6379'
+    labels:
+      - traefik.enable=false
+  ofelia:
+    image: mcuadros/ofelia:latest
+    depends_on:
+      - php-fpm
+    command: daemon --docker
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     labels:
       - traefik.enable=false
 
