--- a/composer.json
+++ b/composer.json
@@ -7,22 +7,23 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.1",
+    "php": "^8.3",
     "guzzlehttp/guzzle": "^7.5",
-    "laravel/framework": "^v10.1",
-    "laravel/sanctum": "^v3.2",
-    "laravel/tinker": "^2.8"
+    "laravel/framework": "^11.8",
+    "laravel/sanctum": "^4.0.2",
+    "laravel/tinker": "^2.9.0",
+    "spatie/laravel-data": "^4.6"
   },
   "require-dev": {
-    "barryvdh/laravel-debugbar": "^3.7",
-    "fakerphp/faker": "^1.9.1",
-    "laravel/pint": "^1.0",
+    "barryvdh/laravel-debugbar": "^3.13",
+    "fakerphp/faker": "^1.23",
+    "laravel/pint": "^1.16",
     "mockery/mockery": "^1.4.4",
-    "nunomaduro/collision": "^6.1",
-    "phpunit/phpunit": "^9.5.10",
-    "slevomat/coding-standard": "^7.2",
-    "spatie/laravel-ignition": "^2.0",
-    "squizlabs/php_codesniffer": "^3.7"
+    "nunomaduro/collision": "^8.1",
+    "phpunit/phpunit": "^11.1",
+    "slevomat/coding-standard": "^8.15",
+    "spatie/laravel-ignition": "^2.7",
+    "squizlabs/php_codesniffer": "^3.10"
   },
   "autoload": {
     "psr-4": {
