--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "lint": "eslint ./resources/src --ext .js,.ts,.vue",
+    "lint-fix": "eslint ./resources/src --ext .js,.ts,.vue --fix"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
-    "@vue/eslint-config-typescript": "^10.0.0",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "laravel-vite-plugin": "^0.5.2",
-    "vite": "^3.0.4",
-    "axios": "^0.27",
-    "eslint": "^8.10.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "lodash": "^4.17.21",
-    "postcss": "^8.4.13",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "laravel-vite-plugin": "^1.0.4",
+    "vite": "^5.2.12",
+    "axios": "^1.7.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.26.0",
+    "postcss": "^8.4.38",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.7",
     "sass-loader": "^12.1.0",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.5.5",
-    "vue-loader": "^17.0.0",
-    "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^0.39.3"
+    "typescript": "^5.4.5",
+    "vue-loader": "^17.4.2",
+    "vue-template-compiler": "^2.7.16",
+    "vue-tsc": "^1.8.27"
   },
   "dependencies": {
-    "bootstrap": "^5.2.0-beta1",
-    "pinia": "^2.0.13",
-    "vue": "^3.2.33",
-    "vue-i18n": "^9.1.10",
-    "vue-router": "^4.0.15"
+    "bootstrap": "^5.3.3",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.27",
+    "vue-i18n": "^9.13.1",
+    "vue-router": "^4.3.2"
   }
 }
