--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,12 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "resources/js/*"
+        "resources/src/*"
       ],
     }
   },
   "include": [
-    "resources/js/**/*"
+    "resources/src/**/*"
   ],
   "exclude": [
     "node_modules"
