--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,7 @@ jobs:
       - name: npm install, prod
         run: |
           npm ci
+          npm run lint
           npm run build
         env:
           CI: true
