Добавлены компоненты форм

--- a/package.json
+++ b/package.json
@@ -12,24 +12,27 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
     "@vitejs/plugin-vue": "^5.0.4",
-    "laravel-vite-plugin": "^1.0.4",
-    "vite": "^5.2.12",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "axios": "^1.7.2",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
+    "laravel-vite-plugin": "^1.0.4",
     "postcss": "^8.4.38",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.7",
     "sass-loader": "^12.1.0",
     "ts-loader": "^9.2.6",
     "typescript": "^5.4.5",
+    "vite": "^5.2.12",
     "vue-loader": "^17.4.2",
     "vue-template-compiler": "^2.7.16",
     "vue-tsc": "^1.8.27"
   },
   "dependencies": {
+    "@vueform/multiselect": "^2.6.7",
+    "@vuepic/vue-datepicker": "^8.7.0",
+    "@vueuse/core": "^10.10.0",
     "bootstrap": "^5.3.3",
     "pinia": "^2.1.7",
     "vue": "^3.4.27",
