--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "vue-tsc": "^1.8.27"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.3",
     "@vueform/multiselect": "^2.6.7",
     "@vuepic/vue-datepicker": "^8.7.0",
     "@vueuse/core": "^10.10.0",
     "bootstrap": "^5.3.3",
+    "floating-vue": "^5.2.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.27",
     "vue-i18n": "^9.13.1",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
