--- a/.editorconfig
+++ b/.editorconfig
@@ -224,7 +224,7 @@ ij_php_while_on_new_line = false
 ij_php_parameters_attributes_wrap = normal
 ij_php_attributes_wrap = split_into_lines
 
-[{*.yml,*.yaml,*.vue,*.ts,*.js,*.css,*.scss,*.json}]
+[{*.yml,*.yaml,*.vue,*.ts,*.js,*.css,*.scss,*.json,*.cjs}]
 indent_size = 2
 tab_width = 2
 ij_continuation_indent_size = 2
