--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.1.3",
+    "@unhead/vue": "^1.9.11",
     "@vueform/multiselect": "^2.6.7",
     "@vuepic/vue-datepicker": "^8.7.0",
     "@vueuse/core": "^10.10.0",
