--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint-fix": "eslint ./resources --ext .js,.ts,.vue --fix"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-vue": "^5.0.4",
