Фикс переменной окружения для докера

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ APP_LOCALE=en
 APP_HOST=localhost
 
 # Used in the docker-compose.yml
-APP_NAMESPACE=localhost
+COMPOSE_PROJECT_NAME=localhost
 
 LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
