--- a/.docker/php-fpm/php.ini
+++ b/.docker/php-fpm/php.ini
@@ -4,8 +4,8 @@ error_reporting = E_ALL
 display_errors = On
 display_startup_errors = On
 
-;zend_extension = xdebug.so
-;xdebug.mode = debug
+zend_extension = xdebug.so
+xdebug.mode = coverage
 ;xdebug.start_with_request = trigger
 ;xdebug.discover_client_host = 1
 ;Settings for PhpStorm
