Обновлен конфиг докера

--- a/.docker/php-fpm/Dockerfile
+++ b/.docker/php-fpm/Dockerfile
@@ -1,20 +1,30 @@
-FROM php:8.3-fpm-alpine
+FROM php:8.3-fpm-alpine AS php_base
 
 ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
 
 RUN chmod +x /usr/local/bin/install-php-extensions && \
-    install-php-extensions gd opcache opcache pdo_mysql zip intl xdebug
+    install-php-extensions gd opcache pdo_mysql zip intl redis exif
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-# TODO: Возможно потребуется доработать
-ARG CURRENT_UID=1000
-ENV CURRENT_UID ${CURRENT_UID}
-ARG CURRENT_GID=1000
-ENV CURRENT_GID ${CURRENT_GID}
+COPY --link app.ini $PHP_INI_DIR/conf.d/
 
-RUN apk --no-cache add shadow && \
-    groupmod -o -g ${CURRENT_GID} www-data && \
-    usermod -o -u ${CURRENT_UID} -g www-data www-data
+FROM php_base AS php_dev
 
+RUN mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
+COPY --link app.dev.ini $PHP_INI_DIR/conf.d/
+
+RUN apk --no-cache add shadow && usermod -u 1000 www-data
+
+USER www-data
+WORKDIR /app
+
+FROM php_base AS php_prod
+
+RUN mv "$PHP_INI_DIR/php.ini-production" "$PHP_INI_DIR/php.ini"
+COPY --link app.prod.ini $PHP_INI_DIR/conf.d/
+
+RUN apk --no-cache add shadow && usermod -u 1000 www-data
+
+USER www-data
 WORKDIR /app
