--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,10 @@ APP_URL=http://localhost
 APP_LOCALE=en
 
 # Hostname without http
-APP_HOST=localhost
+APP_HOST=test-app.loc
 
 # Used in the docker-compose.yml
-COMPOSE_PROJECT_NAME=localhost
+COMPOSE_PROJECT_NAME=testapp
 
 LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
@@ -63,3 +63,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+NGINX_SERVER_NAME="test-app.loc www.test-app.loc"
+
+# Для production режима
+#NGINX_HTTP_PORT=80
+#NGINX_HTTPS_PORT=443
