--- a/.docker/nginx/default.conf.dev.template
+++ b/.docker/nginx/default.conf.dev.template
@@ -21,7 +21,7 @@ server {
     add_header X-Frame-Options "ALLOWALL";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
-    add_header Access-Control-Allow-Origin *;
+    # add_header Access-Control-Allow-Origin *;
     add_header X-Request-ID $request_id;
 
     client_max_body_size 100m;
