--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "type": "module",
   "private": true,
+  "engines" : {
+    "npm" : ">=10.0.0",
+    "node" : ">=22.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,37 +15,34 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.10",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
+    "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-typescript": "^13.0.0",
-    "axios": "^1.7.2",
+    "axios": "^1.11.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.26.0",
-    "laravel-vite-plugin": "^1.0.4",
+    "eslint-plugin-vue": "^9.33.0",
+    "laravel-vite-plugin": "^2.0.0",
     "postcss": "^8.4.38",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.49.7",
+    "sass": "1.77.6",
     "sass-loader": "^12.1.0",
-    "ts-loader": "^9.2.6",
     "typescript": "^5.4.5",
-    "vite": "^5.2.12",
-    "vue-loader": "^17.4.2",
-    "vue-template-compiler": "^2.7.16",
-    "vue-tsc": "^1.8.27"
+    "vite": "^7.1.3",
+    "vue-tsc": "^3.0.5"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.1.3",
-    "@unhead/vue": "^1.9.11",
-    "@vueform/multiselect": "^2.6.7",
-    "@vuepic/vue-datepicker": "^8.7.0",
-    "@vueuse/core": "^10.10.0",
-    "bootstrap": "^5.3.3",
+    "@heroicons/vue": "^2.2.0",
+    "@unhead/vue": "^2.0.14",
+    "@vueform/multiselect": "^2.6.11",
+    "@vuepic/vue-datepicker": "^11.0.2",
+    "@vueuse/core": "^13.7.0",
+    "bootstrap": "^5.3.7",
     "floating-vue": "^5.2.2",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.27",
-    "vue-i18n": "^9.13.1",
-    "vue-router": "^4.3.2",
+    "pinia": "^3.0.3",
+    "vue": "^3.5.18",
+    "vue-i18n": "^11.1.11",
+    "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-rc.5"
   }
 }
