--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,11 @@
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/",
-      "Modules\\": "modules/",
+      "App\\": "src/",
       "Database\\Factories\\": "database/factories/",
       "Database\\Seeders\\": "database/seeders/"
     },
-    "files": [
-      "modules/System/helpers.php"
-    ]
+    "files": []
   },
   "autoload-dev": {
     "psr-4": {
